--- a/style.css
+++ b/style.css
@@ -62,6 +62,15 @@ form input[type=submit]:hover {
  
 }
 
+#campo {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border: 1px solid rgb(0, 0, 0);
+  font-family: 'Courier New', Courier, monospace;
+  font-size: medium;
+
+}
+
 #observacao {
     margin-top: 10px;
     margin-bottom: 10px;
